Fixed testimonials overlapping header

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -4,7 +4,7 @@
     left: 0;
     width: 100%;
     max-height: 120px;
-    z-index: 100;
+    z-index: 110;
 }
 
 .header .header-logo {
